create the entity framework code and account.

--- a/DataProvider/App.config
+++ b/DataProvider/App.config
@@ -11,7 +11,11 @@
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, 
+        MySql.Data.Entity.EF6" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, 
+        EntityFramework.SqlServer" />
+    </providers>
     </providers>
   </entityFramework>
 </configuration>
