--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -191,7 +191,6 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -313,14 +312,23 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Filters\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ConfigSetting\SystemUtil.csproj">
+      <Project>{0b042411-d68f-459f-a07a-580848651c0a}</Project>
+      <Name>SystemUtil</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DataProvider\DataProvider.csproj">
       <Project>{b7eeac87-3019-4949-95a8-d02ddff96df6}</Project>
       <Name>DataProvider</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WebUtil\WebUtil.csproj">
+      <Project>{fa4d7390-378e-42d6-8c0f-52fe98e2b427}</Project>
+      <Name>WebUtil</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
